# securebox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh
.github/workflows/: build.yml
include/: crypto.h  file_operations.h  metadata.h  vault.h
scripts/: benchmark.sh  test_vault.sh
src/: crypto.cpp  file_operations.cpp  main.cpp  metadata.cpp  vault.cpp
tests/: test_crypto.cpp
